--- a/index.html
+++ b/index.html
@@ -24,9 +24,39 @@ var myDataPoint = L.marker([44.56822, -123.28034]).addTo(map);
 // Create line feature for the Route from Wilkinson Hall to Strand Ag Hall, style and add to map
 var myDataLine = L.polyline([[44.5656915, -123.2775289], [44.5656992, -123.2778923], [44.5662266, -123.2778722], [44.5682559, -123.2778293], [44.5682445, -123.2800823]],
     {color: 'red', weight: 5}).addTo(map);
+
+    var Stadia_AlidadeSmoothDark = L.tileLayer('https://tiles.stadiamaps.com/tiles/alidade_smooth_dark/{z}/{x}/{y}{r}.png', {
+      maxZoom: 20,
+      attribution: '&copy; <a href="https://stadiamaps.com/">Stadia Maps</a>, &copy; <a href="https://openmaptiles.org/">OpenMapTiles</a> &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors'
+    }).addTo(map);
+
+    var Esri_WorldImagery = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
+      attribution: 'Tiles &copy; Esri &mdash; Source: Esri, i-cubed, USDA, USGS, AEX, GeoEye, Getmapping, Aerogrid, IGN, IGP, UPR-EGP, and the GIS User Community'
+    }).addTo(map);
+
+    var myDataPoint = L.marker([44.56822, -123.28034]).addTo(map);
+    // Create line feature for the Route from Wilkinson Hall to Strand Ag Hall, style and add to map
+    var myDataLine = L.polyline([
+      [44.5656915, -123.2775289],
+      [44.5656992, -123.2778923],
+      [44.5662266, -123.2778722],
+      [44.5682559, -123.2778293],
+      [44.5682445, -123.2800823]
+    ], {
+      color: 'red',
+      weight: 5
+    }).addTo(map);
     // Create area feature for Strand Ag Hall, style and add to map
-var myArea = L.polygon([[44.5651985, -123.2769978],[44.566131, -123.2769978], [44.5661339, -123.2775027], [44.5651985, -123.2775182], [44.5651985, -123.2769978],],
-    {color: 'orange', weight: 5}).addTo(map);
+    var myArea = L.polygon([
+      [44.5651985, -123.2769978],
+      [44.566131, -123.2769978],
+      [44.5661339, -123.2775027],
+      [44.5651985, -123.2775182],
+      [44.5651985, -123.2769978],
+    ], {
+      color: 'purple',
+      weight: 5
+    }).addTo(map);
   </script>
 </body>
 </html>
